Closed Bug 1607146 Opened 6 years ago Closed 6 years ago

ThreadSanitizer: data race [@ setAnnotateOOMAllocationSizeCallback] vs. [@ setAnnotateOOMAllocationSizeCallback]

Categories

(Core :: JavaScript Engine, defect, P1)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: decoder, Assigned: nbp)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision c0a6eb95b65c.

Looks like two JS workers concurrently setting AutoEnterOOMUnsafeRegion::annotateOOMSizeCallback. Not sure if this is expected or not. If we don't care about which of the works wins here, then making the variable a relaxed atomic will solve this issue already.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

(In reply to Christian Holler (:decoder) from comment #0)

Looks like two JS workers concurrently setting AutoEnterOOMUnsafeRegion::annotateOOMSizeCallback. Not sure if this is expected or not. If we don't care about which of the works wins here, then making the variable a relaxed atomic will solve this issue already.

I think this would be the way to go since we are setting the same crash-reporter handler in all cases.

Assignee: nobody → nicolas.b.pierron
Status: NEW → ASSIGNED
Pushed by npierron@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a2c5a0150d9f Make annotateOOMSizeCallback a relaxed atomic value. r=tcampbell
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: