Bug 1607146 - Make annotateOOMSizeCallback a relaxed atomic value. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D58944